add_library(common STATIC
  maths.cpp
  sinetables.cpp
  cosinetables.cpp
  sinewindows.cpp
  fft.cpp
  rdft.cpp
  dct.cpp
  mdct.cpp
  threads.cpp
  thread.cpp
  mutex.cpp
  ustring.cpp
  error.cpp
  util.cpp
  strutil.cpp
  debugman.cpp
  debug.cpp
  uuid.cpp
  stream.cpp
  streamtokenizer.cpp
  stringmap.cpp
  readline.cpp
  file.cpp
  filepath.cpp
  filelist.cpp
  huffman.cpp
  matrix.cpp
  transmatrix.cpp
  boundingbox.cpp
  configfile.cpp
  configman.cpp
  foxpro.cpp
  zipfile.cpp
  pe_exe.cpp
  systemfonts.cpp
)
