include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libevents.la

noinst_HEADERS = events.h \
                 types.h \
                 requesttypes.h \
                 requests.h

libevents_la_SOURCES = events.cpp \
                       requesttypes.cpp \
                       requests.cpp
