include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libevents.la

noinst_HEADERS = \
                 events.h \
                 types.h \
                 requesttypes.h \
                 requests.h \
                 notifyable.h \
                 notifications.h \
                 timerman.h \
                 joystick.h \
                 $(EMPTY)

libevents_la_SOURCES = \
                       events.cpp \
                       requesttypes.cpp \
                       requests.cpp \
                       notifications.cpp \
                       timerman.cpp \
                       joystick.cpp \
                       $(EMPTY)
