include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libnwscript.la

noinst_HEADERS = types.h \
                 util.h \
                 variable.h \
                 functioncontext.h \
                 object.h \
                 objectcontainer.h \
                 functionman.h \
                 ncsfile.h

libnwscript_la_SOURCES = util.cpp \
                         variable.cpp \
                         functioncontext.cpp \
                         object.cpp \
                         objectcontainer.cpp \
                         functionman.cpp \
                         ncsfile.cpp
