include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libnwscript.la

noinst_HEADERS = \
                 types.h \
                 util.h \
                 variable.h \
                 variablecontainer.h \
                 functioncontext.h \
                 enginetype.h \
                 object.h \
                 objectcontainer.h \
                 functionman.h \
                 ncsfile.h \
                 $(EMPTY)

libnwscript_la_SOURCES = \
                         util.cpp \
                         variable.cpp \
                         variablecontainer.cpp \
                         functioncontext.cpp \
                         objectcontainer.cpp \
                         functionman.cpp \
                         ncsfile.cpp \
                         $(EMPTY)
